--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "colors": "^1.3.3",
     "dotenv": "^8.0.0",
     "fs-extra": "^4.0.3",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "node-telegram-bot-api": "^0.30.0",
+    "nodemailer": "^6.2.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
